# receipt_generation

./: .gitignore  README.md  pyproject.toml
service_receipt/: Dockerfile  config.py  conftest.py  docker-compose.yml  exceptions.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
service_receipt/app_receipt/: admin.py  app_services.py  models.py  schemas.py  serializers.py  tasks.py  test.py  urls.py  views.py
service_receipt/app_receipt/migrations/: 0001_initial.py  0002_order_status_delete_receipt.py  0003_remove_order_restaurant_order_printer.py  0004_printer_print_queue.py  0005_alter_printer_print_queue.py  0006_alter_order_status.py
service_receipt/app_receipt/templates/: pdf_template.html
service_receipt/app_receipt/tests/: test_create_receipt.py  test_get_receipt.py  test_views.py
service_receipt/service_receipt/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
service_receipt/service_receipt/middleware/: middleware.py
