[tool.poetry]
name = "receipt-generation"
version = "0.1.0"
description = ""
authors = ["ElenaGlu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fields = "^5.0.0"
psycopg2-binary = "^2.9.9"
pytest-django = "^4.8.0"
pytest = "^8.2.2"
celery = "^5.4.0"
pdfkit = "^1.0.0"
redis = "^5.0.6"
django = "4.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
